<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/bg">


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        >

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/titlename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imglogo"
                android:layout_centerVertical="true"
                android:fontFamily="@font/tumavobold"
                android:text="@string/login_title"
                android:textColor="@color/colorTitle"
                android:textSize="28sp" />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/formlogin"
            android:layout_width="250dp"
            android:layout_height="240dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@drawable/formlogin_boder"
            >
            <TextView
                android:id="@+id/namelogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textSize="18sp"
                android:fontFamily="@font/montserratregular"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
            <View style="@style/Divider"
                android:layout_below="@id/namelogin"
                android:layout_marginTop="5dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:id="@+id/imgemail"
                    android:layout_width="12dp"
                    android:layout_height="17dp"
                    android:src="@drawable/user"
                    android:layout_marginEnd="10dp"
                    />
                <EditText
                    android:id="@+id/txtemail"
                    android:layout_marginEnd="5dp"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgemail"
                    android:hint="email"
                    android:textSize="12sp"
                    android:background="@android:color/transparent"
                    />
                <View style="@style/Divider2"
                    android:layout_below="@id/txtemail"
                    android:layout_marginTop="5dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:id="@+id/imgpassword"
                    android:layout_width="12dp"
                    android:layout_height="17dp"
                    android:src="@drawable/lock"
                    android:layout_marginEnd="10dp"
                    />
                <EditText
                    android:id="@+id/txtpassword"
                    android:layout_marginEnd="5dp"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgpassword"
                    android:hint="password"
                    android:textSize="12sp"
                    android:background="@android:color/transparent"
                    />
                <View style="@style/Divider2"
                    android:layout_below="@id/txtpassword"
                    android:layout_marginTop="5dp"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/forgotpass"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="10sp"
                android:textColor="@color/colorTitle"
                android:fontFamily="@font/montserratregular"
                android:layout_marginTop="20dp"
                />
            <Button
                android:id="@+id/btnlogin"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:background="#496EEA"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="LOGIN"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register a new account"
            android:layout_below="@id/formlogin"
            android:layout_centerHorizontal="true"
            android:textColor="#FFA005"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>
</RelativeLayout>